# logviewer2

./: .dockerignore  .gitignore  .yarnrc  Dockerfile  Pipfile  README.md  docker-compose.yml  example.env  logviewer.bat  logviewer.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scripts.py
.docker/: entry_point.sh
logviewer/: decos.py  utils.py  web.py
logviewer/log_utils/: formatter.py  models.py
logviewer2/: __init__.py  constants.py  web.py
logviewer2/log_utils/: README.md  models.py
logviewer2/utils/: __init__.py  db.py  decos.py  regexcfg.py
logviewer2/views/: __init__.py  auth.py  fproxy.py
static/css/: logstyle.css  materialize.css  solarized-dark.css  style.css
static/icons/: README.md
templates/: base.html  index.html  logbase.html  navbar.html  not_found.html  server_error.html  unauthorized.html
