[tool.poetry]
name = "logviewer2"
version = "0.1.0"
description = ""
authors = ["Nadie <hackerjef@users.noreply.github.com>", "Lala Sabathil <aiko@aitsys.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
flask = "^3.0.2"
gevent = "^24.2.1"
natural = "^0.2.0"
dateutils = "^0.6.12"
click = "^8.1.3"
python-dotenv = "^1.0.1"
requests-oauthlib = "^1.3.1"
pymongo = {extras = ["srv"], version = "4.11.3"}
sentry-sdk = {extras = ["flask"], version = "2.8.0"}
flask-discord = {git = "https://github.com/Aiko-IT-Systems/flask-discord.git", rev = "main"}
gunicorn = "22.0.0"
psycogreen = "^1.0.2"
audioop-lts = { version = "*", markers = "python_version >= '3.13'" }

[tool.poetry.scripts]
web = 'scripts:web'
webd = 'scripts:webd'
secret = 'scripts:secret'
gensecret = 'scripts:gensecret'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"